--- a/dists/msvc9/kyra.vcproj
+++ b/dists/msvc9/kyra.vcproj
@@ -580,6 +580,10 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\engines\kyra\timer_lol.cpp"
+			>
+		</File>
+		<File
 			RelativePath="..\..\engines\kyra\timer_mr.cpp"
 			>
 		</File>
