--- a/dists/msvc7/agi.vcproj
+++ b/dists/msvc7/agi.vcproj
@@ -4,40 +4,18 @@
 	Version="7,00"
 	Name="agi"
 	ProjectGUID="{F5F57066-CDF4-4F80-B9E7-7F4D21850D6E}"
-	#RootNamespace="agi"
-	Keyword="Win32Proj"
-	TargetFrameworkVersion="131072"
-	>
+	Keyword="Win32Proj">
 	<Platforms>
 		<Platform
-			Name="Win32"
-		/>
+			Name="Win32"/>
 	</Platforms>
-	<ToolFiles>
-	</ToolFiles>
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
 			OutputDirectory="agi_Debug"
 			IntermediateDirectory="agi_Debug"
 			ConfigurationType="4"
-			CharacterSet="2"
-			>
-			<Tool
-				Name="VCPreBuildEventTool"
-			/>
-			<Tool
-				Name="VCCustomBuildTool"
-			/>
-			<Tool
-				Name="VCXMLDataGeneratorTool"
-			/>
-			<Tool
-				Name="VCWebServiceProxyGeneratorTool"
-			/>
-			<Tool
-				Name="VCMIDLTool"
-			/>
+			CharacterSet="2">
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalOptions="/wd4201 /wd4512 /wd4511 /wd4100 /wd4121 /wd4310 /wd4706 /wd4127 /wd4189 /wd4702"
@@ -58,36 +36,24 @@
 				WarnAsError="TRUE"
 				SuppressStartupBanner="FALSE"
 				Detect64BitPortabilityProblems="FALSE"
-				DebugInformationFormat="4"
-			/>
+				DebugInformationFormat="4"/>
 			<Tool
-				Name="VCManagedResourceCompilerTool"
-			/>
-			<Tool
-				Name="VCCustomBuildTool"
-			/>
-			<Tool
-				Name="VCPreLinkEventTool"
-			/>
+				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLibrarianTool"
-				OutputFile="$(OutDir)/agi.lib"
-			/>
+				OutputFile="$(OutDir)/agi.lib"/>
 			<Tool
-				Name="VCALinkTool"
-			/>
+				Name="VCMIDLTool"/>
 			<Tool
-				Name="VCXDCMakeTool"
-			/>
+				Name="VCPostBuildEventTool"/>
 			<Tool
-				Name="VCBscMakeTool"
-			/>
+				Name="VCPreBuildEventTool"/>
 			<Tool
-				Name="VCFxCopTool"
-			/>
+				Name="VCPreLinkEventTool"/>
 			<Tool
-				Name="VCPostBuildEventTool"
-			/>
+				Name="VCResourceCompilerTool"/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"/>
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
@@ -95,23 +61,7 @@
 			IntermediateDirectory="agi_Release"
 			ConfigurationType="4"
 			CharacterSet="2"
-			WholeProgramOptimization="TRUE"
-			>
-			<Tool
-				Name="VCPreBuildEventTool"
-			/>
-			<Tool
-				Name="VCCustomBuildTool"
-			/>
-			<Tool
-				Name="VCXMLDataGeneratorTool"
-			/>
-			<Tool
-				Name="VCWebServiceProxyGeneratorTool"
-			/>
-			<Tool
-				Name="VCMIDLTool"
-			/>
+			WholeProgramOptimization="TRUE">
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalOptions="/wd4201 /wd4512 /wd4511 /wd4100 /wd4121 /wd4310 /wd4706 /wd4127 /wd4189 /wd4702"
@@ -132,252 +82,185 @@
 				UsePrecompiledHeader="0"
 				WarningLevel="4"
 				WarnAsError="TRUE"
-				DebugInformationFormat="0"
-			/>
+				DebugInformationFormat="0"/>
 			<Tool
-				Name="VCManagedResourceCompilerTool"
-			/>
-			<Tool
-				Name="VCCustomBuildTool"
-			/>
-			<Tool
-				Name="VCPreLinkEventTool"
-			/>
+				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLibrarianTool"
-				OutputFile="$(OutDir)/agi.lib"
-			/>
+				OutputFile="$(OutDir)/agi.lib"/>
 			<Tool
-				Name="VCALinkTool"
-			/>
+				Name="VCMIDLTool"/>
 			<Tool
-				Name="VCXDCMakeTool"
-			/>
+				Name="VCPostBuildEventTool"/>
 			<Tool
-				Name="VCBscMakeTool"
-			/>
+				Name="VCPreBuildEventTool"/>
 			<Tool
-				Name="VCFxCopTool"
-			/>
+				Name="VCPreLinkEventTool"/>
 			<Tool
-				Name="VCPostBuildEventTool"
-			/>
+				Name="VCResourceCompilerTool"/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"/>
 		</Configuration>
 	</Configurations>
-	<References>
-	</References>
 	<Files>
 		<File
-			RelativePath="..\..\engines\agi\agi.cpp"
-			>
+			RelativePath="..\..\engines\agi\agi.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\agi\agi.h"
-			>
+			RelativePath="..\..\engines\agi\agi.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\agi\checks.cpp"
-			>
+			RelativePath="..\..\engines\agi\checks.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\agi\console.cpp"
-			>
+			RelativePath="..\..\engines\agi\console.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\agi\console.h"
-			>
+			RelativePath="..\..\engines\agi\console.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\agi\cycle.cpp"
-			>
+			RelativePath="..\..\engines\agi\cycle.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\agi\detection.cpp"
-			>
+			RelativePath="..\..\engines\agi\detection.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\agi\font.h"
-			>
+			RelativePath="..\..\engines\agi\font.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\agi\global.cpp"
-			>
+			RelativePath="..\..\engines\agi\global.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\agi\graphics.cpp"
-			>
+			RelativePath="..\..\engines\agi\graphics.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\agi\graphics.h"
-			>
+			RelativePath="..\..\engines\agi\graphics.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\agi\id.cpp"
-			>
+			RelativePath="..\..\engines\agi\id.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\agi\inv.cpp"
-			>
+			RelativePath="..\..\engines\agi\inv.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\agi\keyboard.cpp"
-			>
+			RelativePath="..\..\engines\agi\keyboard.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\agi\keyboard.h"
-			>
+			RelativePath="..\..\engines\agi\keyboard.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\agi\loader_v2.cpp"
-			>
+			RelativePath="..\..\engines\agi\loader_v2.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\agi\loader_v3.cpp"
-			>
+			RelativePath="..\..\engines\agi\loader_v3.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\agi\logic.cpp"
-			>
+			RelativePath="..\..\engines\agi\logic.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\agi\logic.h"
-			>
+			RelativePath="..\..\engines\agi\logic.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\agi\lzw.cpp"
-			>
+			RelativePath="..\..\engines\agi\lzw.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\agi\lzw.h"
-			>
+			RelativePath="..\..\engines\agi\lzw.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\agi\menu.cpp"
-			>
+			RelativePath="..\..\engines\agi\menu.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\agi\menu.h"
-			>
+			RelativePath="..\..\engines\agi\menu.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\agi\motion.cpp"
-			>
+			RelativePath="..\..\engines\agi\motion.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\agi\objects.cpp"
-			>
+			RelativePath="..\..\engines\agi\objects.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\agi\op_cmd.cpp"
-			>
+			RelativePath="..\..\engines\agi\op_cmd.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\agi\op_dbg.cpp"
-			>
+			RelativePath="..\..\engines\agi\op_dbg.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\agi\op_test.cpp"
-			>
+			RelativePath="..\..\engines\agi\op_test.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\agi\opcodes.h"
-			>
+			RelativePath="..\..\engines\agi\opcodes.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\agi\picture.cpp"
-			>
+			RelativePath="..\..\engines\agi\picture.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\agi\picture.h"
-			>
+			RelativePath="..\..\engines\agi\picture.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\agi\preagi.cpp"
-			>
+			RelativePath="..\..\engines\agi\preagi.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\agi\preagi.h"
-			>
+			RelativePath="..\..\engines\agi\preagi.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\agi\preagi_common.cpp"
-			>
+			RelativePath="..\..\engines\agi\preagi_common.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\agi\preagi_common.h"
-			>
+			RelativePath="..\..\engines\agi\preagi_common.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\agi\preagi_mickey.cpp"
-			>
+			RelativePath="..\..\engines\agi\preagi_mickey.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\agi\preagi_mickey.h"
-			>
+			RelativePath="..\..\engines\agi\preagi_mickey.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\agi\preagi_troll.cpp"
-			>
+			RelativePath="..\..\engines\agi\preagi_troll.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\agi\preagi_troll.h"
-			>
+			RelativePath="..\..\engines\agi\preagi_troll.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\agi\preagi_winnie.cpp"
-			>
+			RelativePath="..\..\engines\agi\preagi_winnie.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\agi\preagi_winnie.h"
-			>
+			RelativePath="..\..\engines\agi\preagi_winnie.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\agi\predictive.cpp"
-			>
+			RelativePath="..\..\engines\agi\predictive.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\agi\saveload.cpp"
-			>
+			RelativePath="..\..\engines\agi\saveload.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\agi\sound.cpp"
-			>
+			RelativePath="..\..\engines\agi\sound.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\agi\sound.h"
-			>
+			RelativePath="..\..\engines\agi\sound.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\agi\sprite.cpp"
-			>
+			RelativePath="..\..\engines\agi\sprite.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\agi\sprite.h"
-			>
+			RelativePath="..\..\engines\agi\sprite.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\agi\text.cpp"
-			>
+			RelativePath="..\..\engines\agi\text.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\agi\view.cpp"
-			>
+			RelativePath="..\..\engines\agi\view.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\agi\view.h"
-			>
+			RelativePath="..\..\engines\agi\view.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\agi\wagparser.cpp"
-			>
+			RelativePath="..\..\engines\agi\wagparser.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\agi\wagparser.h"
-			>
+			RelativePath="..\..\engines\agi\wagparser.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\agi\words.cpp"
-			>
+			RelativePath="..\..\engines\agi\words.cpp">
 		</File>
 	</Files>
 	<Globals>
