--- a/dists/msvc7/drascula.vcproj
+++ b/dists/msvc7/drascula.vcproj
@@ -4,40 +4,18 @@
 	Version="7,00"
 	Name="drascula"
 	ProjectGUID="{CF888EE2-239C-40D7-83F1-1CDD4F7D56E3}"
-	#RootNamespace="drascula"
-	Keyword="Win32Proj"
-	TargetFrameworkVersion="131072"
-	>
+	Keyword="Win32Proj">
 	<Platforms>
 		<Platform
-			Name="Win32"
-		/>
+			Name="Win32"/>
 	</Platforms>
-	<ToolFiles>
-	</ToolFiles>
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
 			OutputDirectory="drascula_Debug"
 			IntermediateDirectory="drascula_Debug"
 			ConfigurationType="4"
-			CharacterSet="2"
-			>
-			<Tool
-				Name="VCPreBuildEventTool"
-			/>
-			<Tool
-				Name="VCCustomBuildTool"
-			/>
-			<Tool
-				Name="VCXMLDataGeneratorTool"
-			/>
-			<Tool
-				Name="VCWebServiceProxyGeneratorTool"
-			/>
-			<Tool
-				Name="VCMIDLTool"
-			/>
+			CharacterSet="2">
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalOptions="/wd4201 /wd4512 /wd4511 /wd4100 /wd4121 /wd4310 /wd4706 /wd4127 /wd4189 /wd4702"
@@ -58,36 +36,24 @@
 				WarnAsError="TRUE"
 				SuppressStartupBanner="FALSE"
 				Detect64BitPortabilityProblems="FALSE"
-				DebugInformationFormat="4"
-			/>
+				DebugInformationFormat="4"/>
 			<Tool
-				Name="VCManagedResourceCompilerTool"
-			/>
-			<Tool
-				Name="VCCustomBuildTool"
-			/>
-			<Tool
-				Name="VCPreLinkEventTool"
-			/>
+				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLibrarianTool"
-				OutputFile="$(OutDir)/drascula.lib"
-			/>
+				OutputFile="$(OutDir)/drascula.lib"/>
 			<Tool
-				Name="VCALinkTool"
-			/>
+				Name="VCMIDLTool"/>
 			<Tool
-				Name="VCXDCMakeTool"
-			/>
+				Name="VCPostBuildEventTool"/>
 			<Tool
-				Name="VCBscMakeTool"
-			/>
+				Name="VCPreBuildEventTool"/>
 			<Tool
-				Name="VCFxCopTool"
-			/>
+				Name="VCPreLinkEventTool"/>
 			<Tool
-				Name="VCPostBuildEventTool"
-			/>
+				Name="VCResourceCompilerTool"/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"/>
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
@@ -95,23 +61,7 @@
 			IntermediateDirectory="drascula_Release"
 			ConfigurationType="4"
 			CharacterSet="2"
-			WholeProgramOptimization="TRUE"
-			>
-			<Tool
-				Name="VCPreBuildEventTool"
-			/>
-			<Tool
-				Name="VCCustomBuildTool"
-			/>
-			<Tool
-				Name="VCXMLDataGeneratorTool"
-			/>
-			<Tool
-				Name="VCWebServiceProxyGeneratorTool"
-			/>
-			<Tool
-				Name="VCMIDLTool"
-			/>
+			WholeProgramOptimization="TRUE">
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalOptions="/wd4201 /wd4512 /wd4511 /wd4100 /wd4121 /wd4310 /wd4706 /wd4127 /wd4189 /wd4702"
@@ -132,96 +82,68 @@
 				UsePrecompiledHeader="0"
 				WarningLevel="4"
 				WarnAsError="TRUE"
-				DebugInformationFormat="0"
-			/>
+				DebugInformationFormat="0"/>
 			<Tool
-				Name="VCManagedResourceCompilerTool"
-			/>
-			<Tool
-				Name="VCCustomBuildTool"
-			/>
-			<Tool
-				Name="VCPreLinkEventTool"
-			/>
+				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLibrarianTool"
-				OutputFile="$(OutDir)/drascula.lib"
-			/>
+				OutputFile="$(OutDir)/drascula.lib"/>
 			<Tool
-				Name="VCALinkTool"
-			/>
+				Name="VCMIDLTool"/>
 			<Tool
-				Name="VCXDCMakeTool"
-			/>
+				Name="VCPostBuildEventTool"/>
 			<Tool
-				Name="VCBscMakeTool"
-			/>
+				Name="VCPreBuildEventTool"/>
 			<Tool
-				Name="VCFxCopTool"
-			/>
+				Name="VCPreLinkEventTool"/>
 			<Tool
-				Name="VCPostBuildEventTool"
-			/>
+				Name="VCResourceCompilerTool"/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"/>
 		</Configuration>
 	</Configurations>
-	<References>
-	</References>
 	<Files>
 		<File
-			RelativePath="..\..\engines\drascula\actors.cpp"
-			>
+			RelativePath="..\..\engines\drascula\actors.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\drascula\animation.cpp"
-			>
+			RelativePath="..\..\engines\drascula\animation.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\drascula\converse.cpp"
-			>
+			RelativePath="..\..\engines\drascula\converse.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\drascula\detection.cpp"
-			>
+			RelativePath="..\..\engines\drascula\detection.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\drascula\drascula.cpp"
-			>
+			RelativePath="..\..\engines\drascula\drascula.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\drascula\drascula.h"
-			>
+			RelativePath="..\..\engines\drascula\drascula.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\drascula\graphics.cpp"
-			>
+			RelativePath="..\..\engines\drascula\graphics.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\drascula\interface.cpp"
-			>
+			RelativePath="..\..\engines\drascula\interface.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\drascula\objects.cpp"
-			>
+			RelativePath="..\..\engines\drascula\objects.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\drascula\palette.cpp"
-			>
+			RelativePath="..\..\engines\drascula\palette.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\drascula\rooms.cpp"
-			>
+			RelativePath="..\..\engines\drascula\rooms.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\drascula\saveload.cpp"
-			>
+			RelativePath="..\..\engines\drascula\saveload.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\drascula\sound.cpp"
-			>
+			RelativePath="..\..\engines\drascula\sound.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\drascula\talk.cpp"
-			>
+			RelativePath="..\..\engines\drascula\talk.cpp">
 		</File>
 	</Files>
 	<Globals>
