--- a/dists/msvc71/groovie.vcproj
+++ b/dists/msvc71/groovie.vcproj
@@ -4,40 +4,18 @@
 	Version="7,10"
 	Name="groovie"
 	ProjectGUID="{2C1EA540-0B09-11DD-BD00-000000000000}"
-	#RootNamespace="groovie"
-	Keyword="Win32Proj"
-	TargetFrameworkVersion="131072"
-	>
+	Keyword="Win32Proj">
 	<Platforms>
 		<Platform
-			Name="Win32"
-		/>
+			Name="Win32"/>
 	</Platforms>
-	<ToolFiles>
-	</ToolFiles>
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
 			OutputDirectory="groovie_Debug"
 			IntermediateDirectory="groovie_Debug"
 			ConfigurationType="4"
-			CharacterSet="2"
-			>
-			<Tool
-				Name="VCPreBuildEventTool"
-			/>
-			<Tool
-				Name="VCCustomBuildTool"
-			/>
-			<Tool
-				Name="VCXMLDataGeneratorTool"
-			/>
-			<Tool
-				Name="VCWebServiceProxyGeneratorTool"
-			/>
-			<Tool
-				Name="VCMIDLTool"
-			/>
+			CharacterSet="2">
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalOptions="/wd4201 /wd4512 /wd4511 /wd4100 /wd4121 /wd4310 /wd4706 /wd4127 /wd4189 /wd4702"
@@ -55,36 +33,30 @@
 				WarningLevel="4"
 				WarnAsError="FALSE"
 				SuppressStartupBanner="FALSE"
-				DebugInformationFormat="4"
-			/>
+				DebugInformationFormat="4"/>
 			<Tool
-				Name="VCManagedResourceCompilerTool"
-			/>
-			<Tool
-				Name="VCCustomBuildTool"
-			/>
-			<Tool
-				Name="VCPreLinkEventTool"
-			/>
+				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLibrarianTool"
-				OutputFile="$(OutDir)/groovie.lib"
-			/>
+				OutputFile="$(OutDir)/groovie.lib"/>
 			<Tool
-				Name="VCALinkTool"
-			/>
+				Name="VCMIDLTool"/>
 			<Tool
-				Name="VCXDCMakeTool"
-			/>
+				Name="VCPostBuildEventTool"/>
 			<Tool
-				Name="VCBscMakeTool"
-			/>
+				Name="VCPreBuildEventTool"/>
 			<Tool
-				Name="VCFxCopTool"
-			/>
+				Name="VCPreLinkEventTool"/>
 			<Tool
-				Name="VCPostBuildEventTool"
-			/>
+				Name="VCResourceCompilerTool"/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"/>
+			<Tool
+				Name="VCManagedWrapperGeneratorTool"/>
+			<Tool
+				Name="VCAuxiliaryManagedWrapperGeneratorTool"/>
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
@@ -92,23 +64,7 @@
 			IntermediateDirectory="groovie_Release"
 			ConfigurationType="4"
 			CharacterSet="2"
-			WholeProgramOptimization="TRUE"
-			>
-			<Tool
-				Name="VCPreBuildEventTool"
-			/>
-			<Tool
-				Name="VCCustomBuildTool"
-			/>
-			<Tool
-				Name="VCXMLDataGeneratorTool"
-			/>
-			<Tool
-				Name="VCWebServiceProxyGeneratorTool"
-			/>
-			<Tool
-				Name="VCMIDLTool"
-			/>
+			WholeProgramOptimization="TRUE">
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalOptions="/wd4201 /wd4512 /wd4511 /wd4100 /wd4121 /wd4310 /wd4706 /wd4127 /wd4189 /wd4702"
@@ -126,156 +82,121 @@
 				UsePrecompiledHeader="0"
 				WarningLevel="4"
 				WarnAsError="TRUE"
-				DebugInformationFormat="0"
-			/>
+				DebugInformationFormat="0"/>
 			<Tool
-				Name="VCManagedResourceCompilerTool"
-			/>
-			<Tool
-				Name="VCCustomBuildTool"
-			/>
-			<Tool
-				Name="VCPreLinkEventTool"
-			/>
+				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLibrarianTool"
-				OutputFile="$(OutDir)/groovie.lib"
-			/>
+				OutputFile="$(OutDir)/groovie.lib"/>
 			<Tool
-				Name="VCALinkTool"
-			/>
+				Name="VCMIDLTool"/>
 			<Tool
-				Name="VCXDCMakeTool"
-			/>
+				Name="VCPostBuildEventTool"/>
 			<Tool
-				Name="VCBscMakeTool"
-			/>
+				Name="VCPreBuildEventTool"/>
 			<Tool
-				Name="VCFxCopTool"
-			/>
+				Name="VCPreLinkEventTool"/>
 			<Tool
-				Name="VCPostBuildEventTool"
-			/>
+				Name="VCResourceCompilerTool"/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"/>
+			<Tool
+				Name="VCManagedWrapperGeneratorTool"/>
+			<Tool
+				Name="VCAuxiliaryManagedWrapperGeneratorTool"/>
 		</Configuration>
 	</Configurations>
 	<References>
 	</References>
 	<Files>
 		<File
-			RelativePath="..\..\engines\groovie\cell.cpp"
-			>
+			RelativePath="..\..\engines\groovie\cell.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\groovie\cell.h"
-			>
+			RelativePath="..\..\engines\groovie\cell.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\groovie\cursor.cpp"
-			>
+			RelativePath="..\..\engines\groovie\cursor.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\groovie\cursor.h"
-			>
+			RelativePath="..\..\engines\groovie\cursor.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\groovie\debug.cpp"
-			>
+			RelativePath="..\..\engines\groovie\debug.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\groovie\debug.h"
-			>
+			RelativePath="..\..\engines\groovie\debug.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\groovie\detection.cpp"
-			>
+			RelativePath="..\..\engines\groovie\detection.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\groovie\font.cpp"
-			>
+			RelativePath="..\..\engines\groovie\font.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\groovie\font.h"
-			>
+			RelativePath="..\..\engines\groovie\font.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\groovie\graphics.cpp"
-			>
+			RelativePath="..\..\engines\groovie\graphics.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\groovie\graphics.h"
-			>
+			RelativePath="..\..\engines\groovie\graphics.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\groovie\groovie.cpp"
-			>
+			RelativePath="..\..\engines\groovie\groovie.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\groovie\groovie.h"
-			>
+			RelativePath="..\..\engines\groovie\groovie.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\groovie\lzss.cpp"
-			>
+			RelativePath="..\..\engines\groovie\lzss.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\groovie\lzss.h"
-			>
+			RelativePath="..\..\engines\groovie\lzss.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\groovie\music.cpp"
-			>
+			RelativePath="..\..\engines\groovie\music.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\groovie\music.h"
-			>
+			RelativePath="..\..\engines\groovie\music.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\groovie\player.cpp"
-			>
+			RelativePath="..\..\engines\groovie\player.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\groovie\player.h"
-			>
+			RelativePath="..\..\engines\groovie\player.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\groovie\resource.cpp"
-			>
+			RelativePath="..\..\engines\groovie\resource.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\groovie\resource.h"
-			>
+			RelativePath="..\..\engines\groovie\resource.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\groovie\roq.cpp"
-			>
+			RelativePath="..\..\engines\groovie\roq.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\groovie\roq.h"
-			>
+			RelativePath="..\..\engines\groovie\roq.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\groovie\saveload.cpp"
-			>
+			RelativePath="..\..\engines\groovie\saveload.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\groovie\saveload.h"
-			>
+			RelativePath="..\..\engines\groovie\saveload.h">
 		</File>		
 		<File
-			RelativePath="..\..\engines\groovie\script.cpp"
-			>
+			RelativePath="..\..\engines\groovie\script.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\groovie\script.h"
-			>
+			RelativePath="..\..\engines\groovie\script.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\groovie\vdx.cpp"
-			>
+			RelativePath="..\..\engines\groovie\vdx.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\groovie\vdx.h"
-			>
+			RelativePath="..\..\engines\groovie\vdx.h">
 		</File>
 	</Files>
 	<Globals>
