--- a/dists/msvc71/sword1.vcproj
+++ b/dists/msvc71/sword1.vcproj
@@ -4,40 +4,18 @@
 	Version="7,10"
 	Name="sword1"
 	ProjectGUID="{C8AAE83E-198B-4ECA-A877-166827953979}"
-	#RootNamespace="sword1"
-	Keyword="Win32Proj"
-	TargetFrameworkVersion="131072"
-	>
+	Keyword="Win32Proj">
 	<Platforms>
 		<Platform
-			Name="Win32"
-		/>
+			Name="Win32"/>
 	</Platforms>
-	<ToolFiles>
-	</ToolFiles>
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
 			OutputDirectory="sword1_Debug"
 			IntermediateDirectory="sword1_Debug"
 			ConfigurationType="4"
-			CharacterSet="2"
-			>
-			<Tool
-				Name="VCPreBuildEventTool"
-			/>
-			<Tool
-				Name="VCCustomBuildTool"
-			/>
-			<Tool
-				Name="VCXMLDataGeneratorTool"
-			/>
-			<Tool
-				Name="VCWebServiceProxyGeneratorTool"
-			/>
-			<Tool
-				Name="VCMIDLTool"
-			/>
+			CharacterSet="2">
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalOptions="/wd4201 /wd4512 /wd4511 /wd4100 /wd4121 /wd4310 /wd4706 /wd4127 /wd4189 /wd4702"
@@ -58,36 +36,30 @@
 				WarnAsError="TRUE"
 				SuppressStartupBanner="FALSE"
 				Detect64BitPortabilityProblems="FALSE"
-				DebugInformationFormat="4"
-			/>
+				DebugInformationFormat="4"/>
 			<Tool
-				Name="VCManagedResourceCompilerTool"
-			/>
-			<Tool
-				Name="VCCustomBuildTool"
-			/>
-			<Tool
-				Name="VCPreLinkEventTool"
-			/>
+				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLibrarianTool"
-				OutputFile="$(OutDir)/sword1.lib"
-			/>
+				OutputFile="$(OutDir)/sword1.lib"/>
 			<Tool
-				Name="VCALinkTool"
-			/>
+				Name="VCMIDLTool"/>
 			<Tool
-				Name="VCXDCMakeTool"
-			/>
+				Name="VCPostBuildEventTool"/>
 			<Tool
-				Name="VCBscMakeTool"
-			/>
+				Name="VCPreBuildEventTool"/>
 			<Tool
-				Name="VCFxCopTool"
-			/>
+				Name="VCPreLinkEventTool"/>
 			<Tool
-				Name="VCPostBuildEventTool"
-			/>
+				Name="VCResourceCompilerTool"/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"/>
+			<Tool
+				Name="VCManagedWrapperGeneratorTool"/>
+			<Tool
+				Name="VCAuxiliaryManagedWrapperGeneratorTool"/>
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
@@ -95,23 +67,7 @@
 			IntermediateDirectory="sword1_Release"
 			ConfigurationType="4"
 			CharacterSet="2"
-			WholeProgramOptimization="TRUE"
-			>
-			<Tool
-				Name="VCPreBuildEventTool"
-			/>
-			<Tool
-				Name="VCCustomBuildTool"
-			/>
-			<Tool
-				Name="VCXMLDataGeneratorTool"
-			/>
-			<Tool
-				Name="VCWebServiceProxyGeneratorTool"
-			/>
-			<Tool
-				Name="VCMIDLTool"
-			/>
+			WholeProgramOptimization="TRUE">
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalOptions="/wd4201 /wd4512 /wd4511 /wd4100 /wd4121 /wd4310 /wd4706 /wd4127 /wd4189 /wd4702"
@@ -132,192 +88,148 @@
 				UsePrecompiledHeader="0"
 				WarningLevel="4"
 				WarnAsError="TRUE"
-				DebugInformationFormat="0"
-			/>
+				DebugInformationFormat="0"/>
 			<Tool
-				Name="VCManagedResourceCompilerTool"
-			/>
-			<Tool
-				Name="VCCustomBuildTool"
-			/>
-			<Tool
-				Name="VCPreLinkEventTool"
-			/>
+				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLibrarianTool"
-				OutputFile="$(OutDir)/sword1.lib"
-			/>
+				OutputFile="$(OutDir)/sword1.lib"/>
 			<Tool
-				Name="VCALinkTool"
-			/>
+				Name="VCMIDLTool"/>
 			<Tool
-				Name="VCXDCMakeTool"
-			/>
+				Name="VCPostBuildEventTool"/>
 			<Tool
-				Name="VCBscMakeTool"
-			/>
+				Name="VCPreBuildEventTool"/>
 			<Tool
-				Name="VCFxCopTool"
-			/>
+				Name="VCPreLinkEventTool"/>
 			<Tool
-				Name="VCPostBuildEventTool"
-			/>
+				Name="VCResourceCompilerTool"/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"/>
+			<Tool
+				Name="VCManagedWrapperGeneratorTool"/>
+			<Tool
+				Name="VCAuxiliaryManagedWrapperGeneratorTool"/>
 		</Configuration>
 	</Configurations>
 	<References>
 	</References>
 	<Files>
 		<File
-			RelativePath="..\..\engines\sword1\animation.cpp"
-			>
+			RelativePath="..\..\engines\sword1\animation.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword1\animation.h"
-			>
+			RelativePath="..\..\engines\sword1\animation.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword1\collision.h"
-			>
+			RelativePath="..\..\engines\sword1\collision.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword1\control.cpp"
-			>
+			RelativePath="..\..\engines\sword1\control.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword1\control.h"
-			>
+			RelativePath="..\..\engines\sword1\control.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword1\debug.cpp"
-			>
+			RelativePath="..\..\engines\sword1\debug.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword1\debug.h"
-			>
+			RelativePath="..\..\engines\sword1\debug.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword1\detection.cpp"
-			>
+			RelativePath="..\..\engines\sword1\detection.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword1\eventman.cpp"
-			>
+			RelativePath="..\..\engines\sword1\eventman.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword1\eventman.h"
-			>
+			RelativePath="..\..\engines\sword1\eventman.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword1\logic.cpp"
-			>
+			RelativePath="..\..\engines\sword1\logic.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword1\logic.h"
-			>
+			RelativePath="..\..\engines\sword1\logic.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword1\memman.cpp"
-			>
+			RelativePath="..\..\engines\sword1\memman.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword1\memman.h"
-			>
+			RelativePath="..\..\engines\sword1\memman.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword1\menu.cpp"
-			>
+			RelativePath="..\..\engines\sword1\menu.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword1\menu.h"
-			>
+			RelativePath="..\..\engines\sword1\menu.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword1\mouse.cpp"
-			>
+			RelativePath="..\..\engines\sword1\mouse.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword1\mouse.h"
-			>
+			RelativePath="..\..\engines\sword1\mouse.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword1\music.cpp"
-			>
+			RelativePath="..\..\engines\sword1\music.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword1\music.h"
-			>
+			RelativePath="..\..\engines\sword1\music.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword1\object.h"
-			>
+			RelativePath="..\..\engines\sword1\object.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword1\objectman.cpp"
-			>
+			RelativePath="..\..\engines\sword1\objectman.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword1\objectman.h"
-			>
+			RelativePath="..\..\engines\sword1\objectman.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword1\resman.cpp"
-			>
+			RelativePath="..\..\engines\sword1\resman.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword1\resman.h"
-			>
+			RelativePath="..\..\engines\sword1\resman.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword1\router.cpp"
-			>
+			RelativePath="..\..\engines\sword1\router.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword1\router.h"
-			>
+			RelativePath="..\..\engines\sword1\router.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword1\screen.cpp"
-			>
+			RelativePath="..\..\engines\sword1\screen.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword1\screen.h"
-			>
+			RelativePath="..\..\engines\sword1\screen.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword1\sound.cpp"
-			>
+			RelativePath="..\..\engines\sword1\sound.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword1\sound.h"
-			>
+			RelativePath="..\..\engines\sword1\sound.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword1\staticres.cpp"
-			>
+			RelativePath="..\..\engines\sword1\staticres.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword1\sword1.cpp"
-			>
+			RelativePath="..\..\engines\sword1\sword1.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword1\sword1.h"
-			>
+			RelativePath="..\..\engines\sword1\sword1.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword1\sworddefs.h"
-			>
+			RelativePath="..\..\engines\sword1\sworddefs.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword1\swordres.h"
-			>
+			RelativePath="..\..\engines\sword1\swordres.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword1\text.cpp"
-			>
+			RelativePath="..\..\engines\sword1\text.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword1\text.h"
-			>
+			RelativePath="..\..\engines\sword1\text.h">
 		</File>
 	</Files>
 	<Globals>
