--- a/dists/msvc71/sword2.vcproj
+++ b/dists/msvc71/sword2.vcproj
@@ -4,40 +4,18 @@
 	Version="7,10"
 	Name="sword2"
 	ProjectGUID="{6CC3E421-779D-4E80-8100-520886A0F9FF}"
-	#RootNamespace="sword2"
-	Keyword="Win32Proj"
-	TargetFrameworkVersion="131072"
-	>
+	Keyword="Win32Proj">
 	<Platforms>
 		<Platform
-			Name="Win32"
-		/>
+			Name="Win32"/>
 	</Platforms>
-	<ToolFiles>
-	</ToolFiles>
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
 			OutputDirectory="sword2_Debug"
 			IntermediateDirectory="sword2_Debug"
 			ConfigurationType="4"
-			CharacterSet="2"
-			>
-			<Tool
-				Name="VCPreBuildEventTool"
-			/>
-			<Tool
-				Name="VCCustomBuildTool"
-			/>
-			<Tool
-				Name="VCXMLDataGeneratorTool"
-			/>
-			<Tool
-				Name="VCWebServiceProxyGeneratorTool"
-			/>
-			<Tool
-				Name="VCMIDLTool"
-			/>
+			CharacterSet="2">
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalOptions="/wd4201 /wd4512 /wd4511 /wd4100 /wd4121 /wd4310 /wd4706 /wd4127 /wd4189 /wd4702"
@@ -58,36 +36,30 @@
 				WarnAsError="TRUE"
 				SuppressStartupBanner="FALSE"
 				Detect64BitPortabilityProblems="FALSE"
-				DebugInformationFormat="4"
-			/>
+				DebugInformationFormat="4"/>
 			<Tool
-				Name="VCManagedResourceCompilerTool"
-			/>
-			<Tool
-				Name="VCCustomBuildTool"
-			/>
-			<Tool
-				Name="VCPreLinkEventTool"
-			/>
+				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLibrarianTool"
-				OutputFile="$(OutDir)/sword2.lib"
-			/>
+				OutputFile="$(OutDir)/sword2.lib"/>
 			<Tool
-				Name="VCALinkTool"
-			/>
+				Name="VCMIDLTool"/>
 			<Tool
-				Name="VCXDCMakeTool"
-			/>
+				Name="VCPostBuildEventTool"/>
 			<Tool
-				Name="VCBscMakeTool"
-			/>
+				Name="VCPreBuildEventTool"/>
 			<Tool
-				Name="VCFxCopTool"
-			/>
+				Name="VCPreLinkEventTool"/>
 			<Tool
-				Name="VCPostBuildEventTool"
-			/>
+				Name="VCResourceCompilerTool"/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"/>
+			<Tool
+				Name="VCManagedWrapperGeneratorTool"/>
+			<Tool
+				Name="VCAuxiliaryManagedWrapperGeneratorTool"/>
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
@@ -95,23 +67,7 @@
 			IntermediateDirectory="sword2_Release"
 			ConfigurationType="4"
 			CharacterSet="2"
-			WholeProgramOptimization="TRUE"
-			>
-			<Tool
-				Name="VCPreBuildEventTool"
-			/>
-			<Tool
-				Name="VCCustomBuildTool"
-			/>
-			<Tool
-				Name="VCXMLDataGeneratorTool"
-			/>
-			<Tool
-				Name="VCWebServiceProxyGeneratorTool"
-			/>
-			<Tool
-				Name="VCMIDLTool"
-			/>
+			WholeProgramOptimization="TRUE">
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalOptions="/wd4201 /wd4512 /wd4511 /wd4100 /wd4121 /wd4310 /wd4706 /wd4127 /wd4189 /wd4702"
@@ -132,236 +88,181 @@
 				UsePrecompiledHeader="0"
 				WarningLevel="4"
 				WarnAsError="TRUE"
-				DebugInformationFormat="0"
-			/>
+				DebugInformationFormat="0"/>
 			<Tool
-				Name="VCManagedResourceCompilerTool"
-			/>
-			<Tool
-				Name="VCCustomBuildTool"
-			/>
-			<Tool
-				Name="VCPreLinkEventTool"
-			/>
+				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLibrarianTool"
-				OutputFile="$(OutDir)/sword2.lib"
-			/>
+				OutputFile="$(OutDir)/sword2.lib"/>
 			<Tool
-				Name="VCALinkTool"
-			/>
+				Name="VCMIDLTool"/>
 			<Tool
-				Name="VCXDCMakeTool"
-			/>
+				Name="VCPostBuildEventTool"/>
 			<Tool
-				Name="VCBscMakeTool"
-			/>
+				Name="VCPreBuildEventTool"/>
 			<Tool
-				Name="VCFxCopTool"
-			/>
+				Name="VCPreLinkEventTool"/>
 			<Tool
-				Name="VCPostBuildEventTool"
-			/>
+				Name="VCResourceCompilerTool"/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"/>
+			<Tool
+				Name="VCManagedWrapperGeneratorTool"/>
+			<Tool
+				Name="VCAuxiliaryManagedWrapperGeneratorTool"/>
 		</Configuration>
 	</Configurations>
 	<References>
 	</References>
 	<Files>
 		<File
-			RelativePath="..\..\engines\sword2\animation.cpp"
-			>
+			RelativePath="..\..\engines\sword2\animation.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword2\animation.h"
-			>
+			RelativePath="..\..\engines\sword2\animation.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword2\anims.cpp"
-			>
+			RelativePath="..\..\engines\sword2\anims.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword2\console.cpp"
-			>
+			RelativePath="..\..\engines\sword2\console.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword2\console.h"
-			>
+			RelativePath="..\..\engines\sword2\console.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword2\controls.cpp"
-			>
+			RelativePath="..\..\engines\sword2\controls.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword2\controls.h"
-			>
+			RelativePath="..\..\engines\sword2\controls.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword2\debug.cpp"
-			>
+			RelativePath="..\..\engines\sword2\debug.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword2\debug.h"
-			>
+			RelativePath="..\..\engines\sword2\debug.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword2\defs.h"
-			>
+			RelativePath="..\..\engines\sword2\defs.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword2\events.cpp"
-			>
+			RelativePath="..\..\engines\sword2\events.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword2\function.cpp"
-			>
+			RelativePath="..\..\engines\sword2\function.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword2\header.h"
-			>
+			RelativePath="..\..\engines\sword2\header.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword2\icons.cpp"
-			>
+			RelativePath="..\..\engines\sword2\icons.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword2\interpreter.cpp"
-			>
+			RelativePath="..\..\engines\sword2\interpreter.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword2\interpreter.h"
-			>
+			RelativePath="..\..\engines\sword2\interpreter.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword2\layers.cpp"
-			>
+			RelativePath="..\..\engines\sword2\layers.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword2\logic.cpp"
-			>
+			RelativePath="..\..\engines\sword2\logic.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword2\logic.h"
-			>
+			RelativePath="..\..\engines\sword2\logic.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword2\maketext.cpp"
-			>
+			RelativePath="..\..\engines\sword2\maketext.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword2\maketext.h"
-			>
+			RelativePath="..\..\engines\sword2\maketext.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword2\memory.cpp"
-			>
+			RelativePath="..\..\engines\sword2\memory.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword2\memory.h"
-			>
+			RelativePath="..\..\engines\sword2\memory.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword2\menu.cpp"
-			>
+			RelativePath="..\..\engines\sword2\menu.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword2\mouse.cpp"
-			>
+			RelativePath="..\..\engines\sword2\mouse.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword2\mouse.h"
-			>
+			RelativePath="..\..\engines\sword2\mouse.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword2\music.cpp"
-			>
+			RelativePath="..\..\engines\sword2\music.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword2\object.h"
-			>
+			RelativePath="..\..\engines\sword2\object.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword2\palette.cpp"
-			>
+			RelativePath="..\..\engines\sword2\palette.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword2\protocol.cpp"
-			>
+			RelativePath="..\..\engines\sword2\protocol.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword2\render.cpp"
-			>
+			RelativePath="..\..\engines\sword2\render.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword2\resman.cpp"
-			>
+			RelativePath="..\..\engines\sword2\resman.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword2\resman.h"
-			>
+			RelativePath="..\..\engines\sword2\resman.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword2\router.cpp"
-			>
+			RelativePath="..\..\engines\sword2\router.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword2\router.h"
-			>
+			RelativePath="..\..\engines\sword2\router.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword2\saveload.cpp"
-			>
+			RelativePath="..\..\engines\sword2\saveload.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword2\saveload.h"
-			>
+			RelativePath="..\..\engines\sword2\saveload.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword2\screen.cpp"
-			>
+			RelativePath="..\..\engines\sword2\screen.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword2\screen.h"
-			>
+			RelativePath="..\..\engines\sword2\screen.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword2\scroll.cpp"
-			>
+			RelativePath="..\..\engines\sword2\scroll.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword2\sound.cpp"
-			>
+			RelativePath="..\..\engines\sword2\sound.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword2\sound.h"
-			>
+			RelativePath="..\..\engines\sword2\sound.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword2\speech.cpp"
-			>
+			RelativePath="..\..\engines\sword2\speech.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword2\sprite.cpp"
-			>
+			RelativePath="..\..\engines\sword2\sprite.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword2\startup.cpp"
-			>
+			RelativePath="..\..\engines\sword2\startup.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword2\sword2.cpp"
-			>
+			RelativePath="..\..\engines\sword2\sword2.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword2\sword2.h"
-			>
+			RelativePath="..\..\engines\sword2\sword2.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword2\sync.cpp"
-			>
+			RelativePath="..\..\engines\sword2\sync.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\sword2\walker.cpp"
-			>
+			RelativePath="..\..\engines\sword2\walker.cpp">
 		</File>
 	</Files>
 	<Globals>
